# Pokinator

./: .gitignore  README.md  pyproject.toml
backend/: agent.py
data/: pokemon_processed.csv  pokemon_raw.csv
frontend/: app.py
models/: feature_columns.pkl  naive_bayes.pkl
notebooks/: 01_data_collection.ipynb  02_preprocessing.ipynb  03_model_training.ipynb
tests/: evaluate_models.py
